# llama.cpp

./: .gitattributes  AGENTS.md  mandelbrot_fractal.py
ggml-rs/: Cargo.toml
ggml-rs/src/: error.rs  graph.rs  lib.rs
ggml-rs/src/backends/: cpu.rs  mod.rs
ggml-rs/src/core/: buffer.rs  context.rs  data_type.rs  mod.rs  shape.rs  tensor.rs
ggml-rs/src/ops/: activate.rs  binary.rs  matmul.rs  mod.rs  reduce.rs  unary.rs
ggml-rs/src/quant/: mod.rs  q4_0.rs  q4_1.rs  q8_0.rs  traits.rs
ggml/src/ggml-cuda/: common.cuh
ggml/src/ggml-opencl/: ggml-opencl.cpp
hardware-acceleration/: README.md  README_EN.md
hardware-acceleration/amd-npu/: CMakeLists.txt  README.md  README_CN.md  build.sh  integration.cmake  quickstart.py
hardware-acceleration/amd-npu/cmake/: ggml-amdxdnaConfig.cmake.in
hardware-acceleration/amd-npu/docs/: architecture.md  installation.md  performance.md
hardware-acceleration/amd-npu/scripts/: detect-npu.sh  install-xrt.sh  verify_npu.py
hardware-acceleration/amd-npu/src/: ggml-amdxdna.cpp  ggml-amdxdna.h
hardware-acceleration/amd-npu/tests/: test_amdxdna.cpp
hardware-acceleration/amd-npu/tools/: benchmark_npu.py  compile_model.py  gguf_to_onnx.py
hardware-acceleration/docs/: dynamic-scheduling.md  iteration-report.md  multi-device-optimization.md  rust-conversion-analysis.md
hardware-acceleration/scripts/: benchmark.sh  build.sh  detect-devices.sh  ollama.sh  test.sh
hardware-acceleration/src/: cpu-optimizations.cpp  ggml-cuda-common.cuh  ggml-metal-device.m  ggml-opencl.cpp  ggml-vulkan.cpp  metal-optimizations.cpp
hardware-acceleration/tools/: multi-device-runner.cpp
moxing/: .gitignore  MANIFEST.in  README.md  pyproject.toml  uploadpypi.sh
moxing/docs/: INSTALL.md
moxing/moxing/: __init__.py  benchmark.py  binaries.py  cli.py  client.py  device.py  models.py  runner.py  server.py
moxing/scripts/: build_and_upload.py  build_and_upload.sh  detect_and_install.py  download_binaries.py  install.ps1  install.sh
pyllama/: MANIFEST.in  README.md  pyproject.toml
pyllama/docs/: INSTALL.md
pyllama/pyllama/: __init__.py  benchmark.py  binaries.py  cli.py  device.py  models.py  runner.py  server.py
pyllama/pyllama_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyllama/scripts/: build_and_upload.py  build_and_upload.sh  detect_and_install.py  download_binaries.py  install.ps1  install.sh
