[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyllama-server"
version = "0.1.0"
description = "Python wrapper for llama.cpp server - OpenAI API compatible backend with auto device detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "llama.cpp community"}
]
keywords = [
    "llama",
    "llama.cpp",
    "gguf",
    "openai",
    "api",
    "gpu",
    "vulkan",
    "cuda",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
openai = ["openai>=1.0.0"]
hf = ["huggingface_hub>=0.20.0"]
modelscope = ["modelscope>=1.10.0"]
all = [
    "openai>=1.0.0",
    "huggingface_hub>=0.20.0",
    "modelscope>=1.10.0",
]

[project.scripts]
pyllama = "pyllama.cli:app"

[project.urls]
Homepage = "https://github.com/ggml-org/llama.cpp"
Documentation = "https://github.com/ggml-org/llama.cpp/tree/master/tools/server"
Repository = "https://github.com/ggml-org/llama.cpp"
Issues = "https://github.com/ggml-org/llama.cpp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyllama*"]

[tool.setuptools.package-data]
pyllama = ["bin/**/*"]

[tool.setuptools]
include-package-data = true